--- a/src/app/components/user-app.component.html
+++ b/src/app/components/user-app.component.html
@@ -5,14 +5,6 @@
   </button>
 
   <div class="row">
-    @if (flagModal) {
-      <div class="col">
-      <h3>Usuario</h3>
-      <user-form (newUserEmitter)="addUser($event)"
-                [user]="selectedUser"></user-form>
-    </div>
-    }
-
     <div class="col">
       <h3>{{ tittle }}</h3>
       <user [users]="users"
@@ -21,4 +13,11 @@
     </div>
   </div>
 </div>
+ @if (flagModal) {
+  <div class="abrir-modal animacion fadeIn">
+    <user-form (newUserEmitter)="addUser($event)"
+                [user]="selectedUser"
+                (modalEmitter)="setFlagModal()"></user-form>
+  </div>
 
+    }
