--- a/src/app/components/user-app.component.html
+++ b/src/app/components/user-app.component.html
@@ -1,7 +1,7 @@
 <div class="container my-4">
   <button class="btn btn-primary"
           (click)="setFlagModal()">
-    {{flagModal ? 'Cerrar' : 'Crear usuario'}}
+    Crear usuario
   </button>
 
   <div class="row">
