--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -1,15 +1,9 @@
-<div class="modal" tabindex="-1" style="display: block;">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">{{ (user.id > 0) ? 'Actualizar' : 'Crear' }} Usuario</h5>
-        <button type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-            (click)="onOpenClose()"></button>
+<div class="card">
+    <div class="card-content">
+      <div class="card-header">
+        <h5 class="card-title">{{ (user.id > 0) ? 'Actualizar' : 'Crear' }} Usuario</h5>
       </div>
-      <div class="modal-body">
+      <div class="card-body">
         <form (ngSubmit)="onSubmit(userForm)" #userForm="ngForm">
           <div>
             <input
@@ -129,14 +123,5 @@
           </div>
         </form>
       </div>
-      <div class="modal-footer">
-        <button type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-              (click)="onOpenClose()">
-            cerrar
-        </button>
-      </div>
     </div>
-  </div>
 </div>
