--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,3 +1,7 @@
+<button class="btn btn-primary my-4"
+    [routerLink]="['/users/create']"  >
+    Crear usuario
+  </button>
 @if (users.length < 1) {
   <div class="alert alert-warning">
     No se encontraron registros!!
