--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -29,7 +29,7 @@
         <td>{{ user.username }}</td>
         <td>
           <button class="btn btn-info btn-sm"
-                  (click)="onSelectUser(user)">
+                  [routerLink]="['/users/edit', user.id]">
             Modificar
           </button>
         </td>
